--- a/index-test.html
+++ b/index-test.html
@@ -26,7 +26,7 @@
         <!-- Conteneur des popups -->
         <div id="popup-container"></div>
 
-        <section class="panel medium color2-alt">
+        <section class="panel large color2-alt">
               <div class="intro color2">
                     <h2 class="major">📅 Planning & Tarifs</h2>
                     <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
