--- a/index-test.html
+++ b/index-test.html
@@ -33,9 +33,9 @@
               </div>
               <div class="inner">
                     <div id="calendar-header" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
-                          <button id="prev-month" style="background: none; border: none; font-size: 1.5rem; cursor: pointer;">◀</button>
-                          <h3 id="calendar-title" style="margin: 0;"></h3>
-                          <button id="next-month" style="background: none; border: none; font-size: 1.5rem; cursor: pointer;">▶</button>
+                          <i id="prev-month" class="fas fa-arrow-circle-left" style="font-size: 1.2rem; cursor: pointer;"></i>
+                          <h3 id="calendar-title" style="margin: 0 1rem; font-size: 1rem;"></h3>
+                          <i id="next-month" class="fas fa-arrow-circle-right" style="font-size: 1.2rem; cursor: pointer;"></i>
                     </div>
                     <div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
               </div>
