--- a/index-test.html
+++ b/index-test.html
@@ -32,10 +32,12 @@
                     <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
               </div>
               <div class="inner">
-                    <div id="calendar-header" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
-                          <i id="prev-month" class="fas fa-arrow-circle-left" style="font-size: 1.2rem; cursor: pointer;"></i>
-                          <h3 id="calendar-title" style="margin: 0 1rem; font-size: 1rem;"></h3>
-                          <i id="next-month" class="fas fa-arrow-circle-right" style="font-size: 1.2rem; cursor: pointer;"></i>
+                    <div id="calendar-header">
+                          <h3 id="calendar-title"></h3>
+                          <div class="nav-arrows">
+                                <i id="prev-month" class="fas fa-arrow-circle-left"></i>
+                                <i id="next-month" class="fas fa-arrow-circle-right"></i>
+                          </div>
                     </div>
                     <div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
               </div>
