--- a/index-test.html
+++ b/index-test.html
@@ -33,11 +33,14 @@
               </div>
               <div class="inner">
                     <div id="calendar-header">
-                          <h3 id="calendar-title"></h3>
-                          <div class="nav-arrows">
-                                <i id="prev-month" class="fas fa-arrow-circle-left"></i>
-                                <i id="next-month" class="fas fa-arrow-circle-right"></i>
+                          <div class="calendar-header-inner">
+                                <h3 id="calendar-title"></h3>
+                                    <div class="nav-arrows">
+                                          <i id="prev-month" class="fas fa-arrow-circle-left"></i>
+                                          <i id="next-month" class="fas fa-arrow-circle-right"></i>
+                                    </div>
                           </div>
+                    </div>
                     </div>
                     <div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
               </div>
