--- a/index-test.html
+++ b/index-test.html
@@ -26,8 +26,8 @@
         <!-- Conteneur des popups -->
         <div id="popup-container"></div>
 
-        <section class="panel large color2">
-              <div class="intro color3">
+        <section class="panel large color4">
+              <div class="intro color1-alt">
                     <h2 class="major">📅 Planning & Tarifs</h2>
                     <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
               </div>
