--- a/index-test.html
+++ b/index-test.html
@@ -45,6 +45,50 @@
               </div>
         </section>
 
+<!-- COLOR 1 -->
+<section class="panel small color1">
+  <div class="intro color1-alt">
+    <h2 class="major">Section Color 1</h2>
+    <p>Contenu de test pour la couleur 1 avec intro color1-alt.</p>
+  </div>
+  <div class="inner">
+    <p>Contenu intérieur de la section color1.</p>
+  </div>
+</section>
+
+<!-- COLOR 2 -->
+<section class="panel small color2">
+  <div class="intro color2-alt">
+    <h2 class="major">Section Color 2</h2>
+    <p>Contenu de test pour la couleur 2 avec intro color2-alt.</p>
+  </div>
+  <div class="inner">
+    <p>Contenu intérieur de la section color2.</p>
+  </div>
+</section>
+
+<!-- COLOR 3 -->
+<section class="panel small color3">
+  <div class="intro color3-alt">
+    <h2 class="major">Section Color 3</h2>
+    <p>Contenu de test pour la couleur 3 avec intro color3-alt.</p>
+  </div>
+  <div class="inner">
+    <p>Contenu intérieur de la section color3.</p>
+  </div>
+</section>
+
+<!-- COLOR 4 -->
+<section class="panel small color4">
+  <div class="intro color4-alt">
+    <h2 class="major">Section Color 4</h2>
+    <p>Contenu de test pour la couleur 4 avec intro color4-alt.</p>
+  </div>
+  <div class="inner">
+    <p>Contenu intérieur de la section color4.</p>
+  </div>
+</section>
+        
       </div>
     </div>
 
