--- a/index-test.html
+++ b/index-test.html
@@ -46,8 +46,8 @@
         </section>
 
 <!-- COLOR 1 -->
-<section class="panel small color1">
-  <div class="intro color1-alt">
+<section class="panel small color1-alt">
+  <div class="intro color1">
     <h2 class="major">Section Color 1</h2>
     <p>Contenu de test pour la couleur 1 avec intro color1-alt.</p>
   </div>
@@ -57,8 +57,8 @@
 </section>
 
 <!-- COLOR 2 -->
-<section class="panel small color2">
-  <div class="intro color2-alt">
+<section class="panel small color2-alt">
+  <div class="intro color2">
     <h2 class="major">Section Color 2</h2>
     <p>Contenu de test pour la couleur 2 avec intro color2-alt.</p>
   </div>
@@ -68,8 +68,8 @@
 </section>
 
 <!-- COLOR 3 -->
-<section class="panel small color3">
-  <div class="intro color3-alt">
+<section class="panel small color3-alt">
+  <div class="intro color3">
     <h2 class="major">Section Color 3</h2>
     <p>Contenu de test pour la couleur 3 avec intro color3-alt.</p>
   </div>
@@ -79,8 +79,8 @@
 </section>
 
 <!-- COLOR 4 -->
-<section class="panel small color4">
-  <div class="intro color4-alt">
+<section class="panel small color4-alt">
+  <div class="intro color4">
     <h2 class="major">Section Color 4</h2>
     <p>Contenu de test pour la couleur 4 avec intro color4-alt.</p>
   </div>
