--- a/index-test.html
+++ b/index-test.html
@@ -43,6 +43,11 @@
                     </div>
                     <div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
               </div>
+
+              <div class="image filtered tinted" data-position="center">
+                <img src="images/gallery/fulls/Autres/03.jpg" alt="Image de fond planning" />
+              </div>
+          
         </section>
 
 <!-- COLOR 1 -->
