--- a/index-test.html
+++ b/index-test.html
@@ -95,28 +95,28 @@
 </section>
 
 <section class="panel spotlight large right">
-  <!-- Bloc gauche : titre + description -->
+  <!-- Bloc texte -->
   <div class="content span-4">
     <h2 class="major">📅 Planning & Tarifs</h2>
     <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
-  </div>
-
-  <!-- Bloc droit : calendrier -->
-  <div class="image tinted" data-position="center" style="display: flex; align-items: center; justify-content: center;">
-    <div class="calendar-wrapper" style="background-color: rgba(255,255,255,0.05); padding: 2rem; border-radius: 1rem;">
-      <div id="calendar-header">
-        <div class="calendar-header-inner">
-          <h3 id="calendar-title"></h3>
-          <div class="nav-arrows">
-            <i id="prev-month" class="fas fa-arrow-circle-left"></i>
-            <i id="next-month" class="fas fa-arrow-circle-right"></i>
-          </div>
+    <div id="calendar-header">
+      <div class="calendar-header-inner">
+        <h3 id="calendar-title"></h3>
+        <div class="nav-arrows">
+          <i id="prev-month" class="fas fa-arrow-circle-left"></i>
+          <i id="next-month" class="fas fa-arrow-circle-right"></i>
         </div>
       </div>
-      <div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
     </div>
+    <div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
+  </div>
+
+  <!-- Image décorative -->
+  <div class="image filtered tinted" data-position="center">
+    <img src="images/gallery/fulls/Autres/03.jpg" alt="Image de fond planning" />
   </div>
 </section>
+
 
 
         
