--- a/index-test.html
+++ b/index-test.html
@@ -120,6 +120,37 @@
 
 
         
+<section class="panel spotlight large left">
+  <!-- Image à gauche -->
+  <div class="image filtered tinted" data-position="center">
+    <img src="images/gallery/fulls/Autres/03.jpg" alt="Image de fond planning" />
+  </div>
+
+  <!-- Contenu à droite -->
+  <div class="content span-8">
+    <div class="intro">
+      <h2 class="major">📅 Planning & Tarifs</h2>
+      <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
+    </div>
+
+    <!-- ✅ Calendrier dans .inner -->
+    <div class="inner">
+      <div id="calendar-header">
+        <div class="calendar-header-inner">
+          <h3 id="calendar-title"></h3>
+          <div class="nav-arrows">
+            <i id="prev-month" class="fas fa-arrow-circle-left"></i>
+            <i id="next-month" class="fas fa-arrow-circle-right"></i>
+          </div>
+        </div>
+      </div>
+      <div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
+    </div>
+  </div>
+</section>
+
+
+        
       </div>
     </div>
 
