--- a/index-test.html
+++ b/index-test.html
@@ -161,6 +161,7 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/equipements.js"></script>
     <script src="assets/js/planning.js"></script>
+    <script src="assets/js/planning2.js"></script>
   </body>
 </html>
 
