--- a/index-test.html
+++ b/index-test.html
@@ -26,7 +26,7 @@
         <!-- Conteneur des popups -->
         <div id="popup-container"></div>
 
-        <section class="panel medium color0">
+        <!-- <section class="panel medium color0">
               <div class="intro color1-alt">
                     <h2 class="major">📅 Planning & Tarifs</h2>
                     <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
@@ -48,7 +48,7 @@
                 <img src="images/gallery/fulls/Autres/03.jpg" alt="Image de fond planning" />
               </div>
           
-        </section>
+        </section> -->
 
 <!-- COLOR 1 -->
 <section class="panel small color1-alt">
@@ -161,7 +161,7 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/equipements.js"></script>
     <script src="assets/js/planning.js"></script>
-    <script src="assets/js/planning2.js"></script>
+    <!-- <script src="assets/js/planning2.js"></script> -->
   </body>
 </html>
 
