--- a/index-test.html
+++ b/index-test.html
@@ -94,6 +94,42 @@
   </div>
 </section>
 
+
+
+
+
+<section class="panel small color4-alt" style="position: relative; overflow: hidden;">
+  <!-- Image en fond -->
+  <div style="position: absolute; inset: 0; z-index: 0;">
+    <img src="images/gallery/fulls/Autres/03.jpg" alt="fond planning" style="width: 100%; height: 100%; object-fit: cover;" />
+  </div>
+
+  <!-- Bloc de gauche avec effet givré -->
+  <div class="intro color4" style="position: relative; z-index: 1; backdrop-filter: blur(10px); background-color: rgba(53, 56, 101, 0.5); border-radius: 1rem; padding: 2rem;">
+    <h2 class="major">📅 Planning & Tarifs</h2>
+    <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
+  </div>
+
+  <!-- Bloc de droite -->
+  <div class="inner" style="position: relative; z-index: 1;">
+    <div id="calendar-header">
+      <div class="calendar-header-inner">
+        <h3 id="calendar-title"></h3>
+        <div class="nav-arrows">
+          <i id="prev-month" class="fas fa-arrow-circle-left"></i>
+          <i id="next-month" class="fas fa-arrow-circle-right"></i>
+        </div>
+      </div>
+    </div>
+    <div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
+  </div>
+</section>
+        
+
+
+
+
+        
 <section class="panel spotlight medium right">
   <div class="content span-7">
     <div class="intro color1-alt">
