--- a/index-test.html
+++ b/index-test.html
@@ -105,7 +105,7 @@
   </div>
 
   <!-- Bloc de gauche avec effet givré -->
-  <div class="intro color4" style="position: relative; z-index: 1; backdrop-filter: blur(10px); background-color: rgba(53, 56, 101, 0.5); border-radius: 1rem; padding: 2rem;">
+  <div class="intro color4" style="position: relative; z-index: 1; backdrop-filter: blur(10px); background-color: rgba(255, 255, 255, 0.5); padding: 2rem;">
     <h2 class="major">📅 Planning & Tarifs</h2>
     <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
   </div>
