--- a/index-test.html
+++ b/index-test.html
@@ -98,14 +98,14 @@
 
 
 
-<section class="panel small color4-alt" style="position: relative; overflow: hidden;">
+<section class="panel medium color4-alt" style="position: relative; overflow: hidden;">
   <!-- Image en fond -->
   <div style="position: absolute; inset: 0; z-index: 0;">
     <img src="images/gallery/fulls/Autres/03.jpg" alt="fond planning" style="width: 100%; height: 100%; object-fit: cover;" />
   </div>
 
   <!-- Bloc de gauche avec effet givré -->
-  <div class="intro color4" style="position: relative; z-index: 1; backdrop-filter: blur(10px); background-color: rgba(255, 255, 255, 0.5); padding: 2rem;">
+  <div class="intro color4" style="position: relative; z-index: 1; backdrop-filter: blur(10px); background-color: rgba(255, 255, 255, 0.05); padding: 2rem;">
     <h2 class="major">📅 Planning & Tarifs</h2>
     <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
   </div>
