--- a/index-test.html
+++ b/index-test.html
@@ -105,7 +105,15 @@
   </div>
 
   <!-- Bloc de gauche avec effet givré -->
-  <div class="intro color4" style="position: relative; z-index: 1; backdrop-filter: blur(5px); background-color: rgba(255, 255, 255, 0.05);">
+  <div class="intro color4" style="
+  position: relative;
+  z-index: 1;
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 8px;
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0 0 12px rgba(255, 255, 255, 0.08);
+  ">
     <h2 class="major">📅 Planning & Tarifs</h2>
     <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
   </div>
