--- a/index-test.html
+++ b/index-test.html
@@ -105,11 +105,10 @@
   </div>
 
   <!-- Bloc de gauche avec effet givré -->
-  <div class="intro color4" style="
+  <div class="intro color1-alt" style="
   position: relative;
   z-index: 1;
   backdrop-filter: blur(10px);
-  background: rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   border: 1px solid rgba(255, 255, 255, 0.15);
   box-shadow: 0 0 12px rgba(255, 255, 255, 0.08);
