--- a/index-test.html
+++ b/index-test.html
@@ -105,12 +105,20 @@
   </div>
 
   <!-- Bloc de gauche avec effet givré -->
-  <div class="intro color1-alt" style="
-  position: relative;
-  z-index: 1;
-  backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  box-shadow: 0 0 12px rgba(255, 255, 255, 0.08);
+  <div class="intro" style="
+    position: relative;
+    z-index: 1;
+    backdrop-filter: blur(10px);
+    background-image: url('images/overlay.png'), linear-gradient(135deg,
+      rgba(114, 97, 147, 0.3) 25%,
+      rgba(227, 123, 124, 0.3) 50%,
+      rgba(255, 228, 180, 0.3)
+    );
+    background-size: 128px 128px, auto;
+    background-color: #6c5e86;
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    box-shadow: 0 0 12px rgba(255, 255, 255, 0.08);
+    padding: 2rem;
   ">
     <h2 class="major">📅 Planning & Tarifs</h2>
     <p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
