--- a/index-test.html
+++ b/index-test.html
@@ -109,7 +109,7 @@
     position: relative;
     z-index: 1;
     backdrop-filter: blur(10px);
-    background-image: url('images/overlay.png'), linear-gradient(135deg,
+    background-image: linear-gradient(135deg,
       rgba(114, 97, 147, 0.3) 25%,
       rgba(227, 123, 124, 0.3) 50%,
       rgba(255, 228, 180, 0.3)
