--- a/index-test.html
+++ b/index-test.html
@@ -115,7 +115,7 @@
       rgba(255, 228, 180, 0.3)
     );
     background-size: 450px 650px, auto;
-    background-color: #6c5e86;
+    background-color: rgba(108, 94, 134, 0.1); /* même couleur, mais transparente */
     border: 1px solid rgba(255, 255, 255, 0.15);
     box-shadow: 0 0 12px rgba(255, 255, 255, 0.08);
     padding: 2rem;
