--- a/index-de.html
+++ b/index-de.html
@@ -313,5 +313,6 @@
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/gallery.js"></script>
 			<script src="assets/js/equipements.js"></script>
+			<script src="assets/js/planning.js"></script>
 	</body>
 </html>
