--- a/index-test.html
+++ b/index-test.html
@@ -138,6 +138,78 @@
     <div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
   </div>
 </section>
+
+
+						<!-- CONTACT -->
+							<section class="panel color4-alt">
+								<div class="intro color4"><h2 class="major">📧 Contactez-nous</h2>
+									<p>Pour toute question ou demande d'information, n'hésitez pas à nous contacter. Vous pouvez également échanger avec Nestor, un assistant intelligent propulsé par ChatGPT, disponible à tout moment pour vous renseigner sur la villa, ses équipements ou les activités à proximité.</p>
+									<ul class="actions">
+									  <li>
+									    <a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay" target="_blank" rel="noopener" class="button primary color2 icon solid fa-comments">Contacter Nestor</a>
+									  </li>
+									</ul>
+								</div>
+								<div class="inner columns divided">
+									<div class="span-3-25">
+										<form method="post" action="#">
+											<div class="fields">
+												<div class="field half">
+													<label for="name">Nom</label>
+													<input type="text" name="name" id="name" />
+												</div>
+												<div class="field half">
+													<label for="email">Email</label>
+													<input type="email" name="email" id="email" />
+												</div>
+												<div class="field">
+													<label for="message">Message</label>
+													<textarea name="message" id="message" rows="4"></textarea>
+												</div>
+											</div>
+											<ul class="actions">
+												<li><input type="submit" value="Envoyer" class="button primary" /></li>
+											</ul>
+										</form>
+									</div>
+									<div class="span-1-5">
+										<p>Consultez les avis laissés par nos précédents voyageurs sur les plateformes :</p>
+										<ul class="contact-icons color1">
+										  <li>
+										    <img src="images/logos/AIRBNB.png" alt="Logo Airbnb" style="width: 48px; height: 48px; border-radius: 50%; background: white; padding: 6px; box-sizing: border-box;">
+										    <div style="display: inline-block; vertical-align: middle; margin-left: 0.75em;">
+										      <a href="https://www.airbnb.fr/rooms/718692761956767082?viralityEntryPoint=1&s=76" target="_blank" rel="noopener" style="text-transform: none; font-family: inherit;">Airbnb</a>
+										      <br />
+										      <span class="stars" style="font-size: 0.8em;">
+										        <i class="fas fa-star color1"></i>
+										        <i class="fas fa-star color1"></i>
+										        <i class="fas fa-star color1"></i>
+										        <i class="fas fa-star color1"></i>
+										        <i class="fas fa-star-half-alt color1"></i>
+										      </span>
+										      <span style="font-size: 0.8em;">(4,92/5) – 6 avis</span>
+										    </div>
+										  </li>
+										
+										  <li style="margin-top: 1.5em;">
+										    <img src="images/logos/BOOKING.png" alt="Logo Booking" style="width: 48px; height: 48px; border-radius: 50%; background: white; padding: 6px; box-sizing: border-box;">
+										    <div style="display: inline-block; vertical-align: middle; margin-left: 0.75em;">
+										      <a href="https://www.booking.com/hotel/gp/calypso-bay.fr.html?aid=318615&label=New_French_FR_FR_21427169905-YP8jtirKV*kzSzTpDnHYDwSM640938627539%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg-7OU47I%401746097399-Share-51Qxi5%401746101264&sid=e3dc038a67f001d547f7fd0c6da767fb&checkin=2025-05-01&checkout=2025-05-02&dest_id=-1202523&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=1&hpos=1&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&soh=1&sr_order=popularity&srepoch=1746101403&srpvid=b15f55886e3d062f&type=total&ucfs=1&activeTab=main#hotelTmpl" target="_blank" rel="noopener" style="text-transform: none; font-family: inherit;">Booking</a>
+										      <br />
+										      <span class="stars" style="font-size: 0.8em;">
+										        <i class="fas fa-star color1"></i>
+										        <i class="fas fa-star color1"></i>
+										        <i class="fas fa-star color1"></i>
+										        <i class="fas fa-star color1"></i>
+										        <i class="fas fa-star-half-alt color1"></i>
+										      </span>
+										      <span style="font-size: 0.8em;">(9,6/10) – 37 avis</span>
+										    </div>
+										  </li>
+										</ul>
+									</div>
+								</div>
+							</section>
         
       </div>
     </div>
