--- a/index-test.html
+++ b/index-test.html
@@ -274,7 +274,7 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/equipements.js"></script>
     <script src="assets/js/planning.js"></script>
-    <!-- <script src="assets/js/planning2.js"></script> -->
+    <script src="assets/js/form-toggle.js"></script>
   </body>
 </html>
 
