--- a/index-test.html
+++ b/index-test.html
@@ -151,7 +151,7 @@
 									</ul>
 								</div>
 								<div class="inner columns divided">
-									<div class="span-3-25">
+									<div class="span-5">
 									  <!-- Toggle des formulaires -->
 									  <div id="form-toggle" class="toggle-container">
 									    <button id="btn-contact" class="toggle-button active">Contact</button>
