--- a/index-test.html
+++ b/index-test.html
@@ -151,7 +151,7 @@
 									</ul>
 								</div>
 								<div class="inner columns divided">
-								<div class="span-3-25">
+								<div class="span-6">
 								
 								  <!-- Toggle Switch -->
 								  <div id="form-toggle" class="toggle-container">
