--- a/index-test.html
+++ b/index-test.html
@@ -26,15 +26,10 @@
 								<div class="span-6">
 								
 								  <!-- Toggle Switch -->
-								<div class="pure-toggle-wrapper">
-								  <input type="radio" id="toggle-contact" name="form-toggle" checked>
-								  <input type="radio" id="toggle-reservation" name="form-toggle">
-								  <div class="toggle-switch">
-								    <label for="toggle-contact" class="toggle-option">Contact</label>
-								    <label for="toggle-reservation" class="toggle-option">Réservation</label>
-								    <div class="toggle-slider"></div>
+								  <div id="form-toggle" class="toggle-container">
+								    <button id="btn-contact" class="toggle-button active">Contact</button>
+								    <button id="btn-reservation" class="toggle-button">Réservation</button>
 								  </div>
-								</div>
 								
 								  <!-- Formulaire Contact -->
 								  <div id="form-contact">
