--- a/index-test.html
+++ b/index-test.html
@@ -174,6 +174,6 @@
 		<script src="assets/js/main.js"></script>
 		<script src="assets/js/equipements.js"></script>
 		<script src="assets/js/planning.js"></script>
-		<script src="assets/js/form-toggle.js"></script>
+		<!-- <script src="assets/js/form-toggle.js"></script> -->
 	</body>
 </html>
