--- a/index-test.html
+++ b/index-test.html
@@ -124,7 +124,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><input type="submit" value="Réserver" class="button primary" /></li>
+											<li><input type="submit" value="Envoyer la demande de réservation" class="button primary" /></li>
 										</ul>
 									</form>
 								</div>
