--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 					</div>
 
 					<div class="inner columns divided">
-						<div class="span-6">
+						<div class="span-4-5">
 							<!-- Form wrapper contenant radios, toggle et formulaires -->
 							<div class="form-wrapper">
 								<!-- Radios -->
