--- a/index-de.html
+++ b/index-de.html
@@ -277,7 +277,7 @@
 					</div>
 
 					<div class="inner columns divided">
-						<div class="span-4-5">
+						<div class="span-5">
 							<div class="form-wrapper">
 								<input type="radio" id="toggle-contact" name="form-toggle" checked />
 								<input type="radio" id="toggle-reservation" name="form-toggle" />
