--- a/index-de.html
+++ b/index-de.html
@@ -378,7 +378,7 @@
 							</div>
 						</div>
 
-						<div class="span-2">
+						<div class="span-1-75">
 							<p>Lesen Sie die Bewertungen früherer Gäste auf folgenden Plattformen:</p>
 							<ul class="contact-icons color1">
 								<li>
