--- a/index.html
+++ b/index.html
@@ -418,7 +418,10 @@
 				</section>
 
 				<!-- COPYRIGHT -->
-				<div class="copyright">&copy; Calypso Bay | Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+				<div class="copyright">
+				    &copy; Calypso Bay | Design: <a href="https://html5up.net" class="moriarty">Moriarty</a>.
+				</div>
+
 			</div>
 		</div>
 
