--- a/index-test.html
+++ b/index-test.html
@@ -23,6 +23,10 @@
 								<a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay" target="_blank" rel="noopener" class="button primary color2 icon solid fa-comments">Contacter Nestor</a>
 							</li>
 						</ul>
+					<p style="font-family: 'Moriarty'; font-size: 48px;">
+    Ceci est un test avec la police Moriarty.
+</p>
+
 					</div>
 
 					<div class="inner columns divided">
