--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
 				<!-- COPYRIGHT -->
 				<div class="copyright">
-				    &copy; Calypso Bay | Design: <a href="https://html5up.net" class="moriarty">Moriarty</a>.
+				    &copy; Calypso Bay | Design: <a class="moriarty">Moriarty</a>.
 				</div>
 
 			</div>
