--- a/index.html
+++ b/index.html
@@ -419,9 +419,8 @@
 
 				<!-- COPYRIGHT -->
 				<div class="copyright">
-				    &copy; Calypso Bay | Design: <a class="moriarty">Moriarty</a>.
+				    &copy; Calypso Bay | Design: <span class="moriarty">Moriarty</span>.
 				</div>
-
 			</div>
 		</div>
 
