--- a/index.html
+++ b/index.html
@@ -419,7 +419,8 @@
 
 				<!-- COPYRIGHT -->
 				<div class="copyright">
-				    &copy; Calypso Bay | Design: <span class="moriarty">Moriarty</span>.
+				    <span>&copy; Calypso Bay | Design:</span>
+				    <span class="moriarty">Moriarty</span>.
 				</div>
 			</div>
 		</div>
