--- a/index-de.html
+++ b/index-de.html
@@ -416,7 +416,10 @@
 				</section>
 
 				<!-- COPYRIGHT -->
-				<div class="copyright">&copy; Calypso Bay | Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+				<div class="copyright">
+				        <span>&copy; Calypso Bay | Design:</span>
+				        <span class="moriarty">Moriarty</span>.
+				</div>
 			</div>
 		</div>
 
