--- a/index-en.html
+++ b/index-en.html
@@ -416,7 +416,7 @@
 
 				<!-- COPYRIGHT -->
 				<div class="copyright">
-				        <span>&copy; Calypso Bay | Design:</span>
+				        <span>&copy; Calypso Bay | By  </span>
 				        <span class="moriarty">Moriarty</span>.
 				</div>
 			</div>
