--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
 				<!-- COPYRIGHT -->
 				<div class="copyright">
-				        <span>&copy; Calypso Bay | Design:</span>
+				        <span>&copy; Calypso Bay | By</span>
 				        <span class="moriarty">Moriarty</span>.
 				</div>
 			</div>
