--- a/index-de.html
+++ b/index-de.html
@@ -417,7 +417,7 @@
 
 				<!-- COPYRIGHT -->
 				<div class="copyright">
-				        <span>&copy; Calypso Bay | Design:</span>
+				        <span>&copy; Calypso Bay | By</span>
 				        <span class="moriarty">Moriarty</span>.
 				</div>
 			</div>
