--- a/index-de.html
+++ b/index-de.html
@@ -220,7 +220,7 @@
 				<section class="panel medium color4-alt" style="position: relative; overflow: hidden;">
 					<!-- Image en fond -->
 					<div style="position: absolute; inset: 0; z-index: 0;">
-						<img src="images/gallery/fulls/Autres/03.jpg" alt="fond planning" style="width: 100%; height: 100%; object-fit: cover;" />
+						<img src="images/gallery/fulls/Autres/03.jpg" alt="fond planning" style="width: 100%; height: 100%; object-fit: cover; object-position: top left;" />
 					</div>
 
 					<!-- Bloc de gauche avec effet givré -->
