--- a/index.html
+++ b/index.html
@@ -224,24 +224,7 @@
 						<img src="images/gallery/fulls/Autres/03.jpg" alt="fond planning" style="width: 100%; height: 100%; object-fit: cover; object-position: top left;" />
 					</div>
 
-					<div
-						class="intro"
-						style="
-									    position: relative;
-									    z-index: 1;
-									    backdrop-filter: blur(5px);
-									    background-image: linear-gradient(135deg,
-									      rgba(114, 97, 147, 0.5) 25%,
-									      rgba(227, 123, 124, 0.5) 50%,
-									      rgba(255, 228, 180, 0.5)
-									    );
-									    background-size: 450px 650px, auto;
-									    background-color: rgba(108, 94, 134, 0.1); /* même couleur, mais transparente */
-									    border: 1px solid rgba(255, 255, 255, 0.15);
-									    box-shadow: 0 0 12px rgba(255, 255, 255, 0.08);
-									    padding: 2rem;
-									  "
-					>
+					<div class="intro planning-blur-style">
 						<h2 class="major">📅 Planning & Tarifs</h2>
 						<p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
 					</div>
