--- a/index.html
+++ b/index.html
@@ -366,37 +366,38 @@
 
 						<div class="span-1-5">
 							<p>Consultez les avis laissés par nos précédents voyageurs sur les plateformes :</p>
-							<ul class="contact-icons color1">
-								<li>
-									<img src="images/logos/AIRBNB.png" alt="Logo Airbnb" style="width: 48px; height: 48px; border-radius: 50%; background: white; padding: 6px;" />
-									<div style="display: inline-block; vertical-align: middle; margin-left: 0.75em;">
-										<a href="https://www.airbnb.fr/rooms/718692761956767082" target="_blank" rel="noopener">Airbnb</a><br />
-										<span class="stars" style="font-size: 0.8em;">
-											<i class="fas fa-star color1"></i>
-											<i class="fas fa-star color1"></i>
-											<i class="fas fa-star color1"></i>
-											<i class="fas fa-star color1"></i>
-											<i class="fas fa-star-half-alt color1"></i>
-										</span>
-										<span style="font-size: 0.8em;">(4,92/5) – 6 avis</span>
-									</div>
-								</li>
+								<ul class="contact-icons color1">
+								  <li class="review-item">
+								    <img src="images/logos/AIRBNB.png" alt="Logo Airbnb" class="logo-circle" />
+								    <div>
+								      <a href="https://www.airbnb.fr/rooms/718692761956767082" target="_blank" rel="noopener">Airbnb</a><br />
+								      <span class="stars">
+								        <i class="fas fa-star color1"></i>
+								        <i class="fas fa-star color1"></i>
+								        <i class="fas fa-star color1"></i>
+								        <i class="fas fa-star color1"></i>
+								        <i class="fas fa-star-half-alt color1"></i>
+								      </span>
+								      <span class="score">(4,92/5) – 6 avis</span>
+								    </div>
+								  </li>
+								
+								  <li class="review-item">
+								    <img src="images/logos/BOOKING.png" alt="Logo Booking" class="logo-circle" />
+								    <div>
+								      <a href="https://www.booking.com/hotel/gp/calypso-bay.fr.html" target="_blank" rel="noopener">Booking</a><br />
+								      <span class="stars">
+								        <i class="fas fa-star color1"></i>
+								        <i class="fas fa-star color1"></i>
+								        <i class="fas fa-star color1"></i>
+								        <i class="fas fa-star color1"></i>
+								        <i class="fas fa-star-half-alt color1"></i>
+								      </span>
+								      <span class="score">(9,6/10) – 37 avis</span>
+								    </div>
+								  </li>
+								</ul>
 
-								<li style="margin-top: 1.5em;">
-									<img src="images/logos/BOOKING.png" alt="Logo Booking" style="width: 48px; height: 48px; border-radius: 50%; background: white; padding: 6px;" />
-									<div style="display: inline-block; vertical-align: middle; margin-left: 0.75em;">
-										<a href="https://www.booking.com/hotel/gp/calypso-bay.fr.html" target="_blank" rel="noopener">Booking</a><br />
-										<span class="stars" style="font-size: 0.8em;">
-											<i class="fas fa-star color1"></i>
-											<i class="fas fa-star color1"></i>
-											<i class="fas fa-star color1"></i>
-											<i class="fas fa-star color1"></i>
-											<i class="fas fa-star-half-alt color1"></i>
-										</span>
-										<span style="font-size: 0.8em;">(9,6/10) – 37 avis</span>
-									</div>
-								</li>
-							</ul>
 						</div>
 					</div>
 				</section>
