--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 						<p>
 							Prenez le temps d’adopter le rythme des Antilles et de découvrir toutes les richesses de cette île exceptionnelle. Que vous soyez amateurs de randonnée (vers les cascades spectaculaires), passionnés de plongée,
 							adeptes du farniente sur les plages paradisiaques comme Malendure ou Anse de la Perle, ou encore friands de moments conviviaux autour d’un verre (le rhum local mérite qu’on s’y attarde !), nous vous souhaitons un
-							séjour inoubliable.<br />
+							séjour inoubliable.
+							<br />
 							Explorez des plages de rêve (Malendure, Anse Leroux, Anse de la Perle…), partez à l’aventure lors de randonnées remarquables (chutes du Carbet, La Lézarde, Trou à Diable…), ou découvrez les fonds marins grâce aux
 							clubs de plongée à proximité, comme Les Heures Saines.
 						</p>
@@ -343,7 +344,8 @@
 											<div class="field quarter">
 												<label for="r-enfants">Nombre d’enfants</label>
 												<select name="r-enfants" id="r-enfants">
-													<option value="0" selected>0 enfant</option>
+													<option value="" disabled selected hidden>Choisir</option>
+													<option value="0">0 enfant</option>
 													<option value="1">1 enfant</option>
 													<option value="2">2 enfants</option>
 													<option value="3">3 enfants</option>
@@ -367,43 +369,43 @@
 						<div class="span-1-5">
 							<p>Consultez les avis laissés par nos précédents voyageurs sur les plateformes :</p>
 							<ul class="contact-icons color1">
-							  <li class="review-item">
-							    <a href="https://www.airbnb.fr/rooms/718692761956767082" target="_blank" rel="noopener" class="review-link" style="display: flex; align-items: center; gap: 0.75em;">
-							      <img src="images/logos/AIRBNB.png" alt="Logo Airbnb" class="logo-circle" />
-							      <div class="review-text">
-							        <span>Airbnb</span>
-							        <div class="review-row">
-							          <span class="stars">
-							            <i class="fas fa-star color1"></i>
-							            <i class="fas fa-star color1"></i>
-							            <i class="fas fa-star color1"></i>
-							            <i class="fas fa-star color1"></i>
-							            <i class="fas fa-star-half-alt color1"></i>
-							          </span>
-							          <span class="score">(4,92/5) – 6 avis</span>
-							        </div>
-							      </div>
-							    </a>
-							  </li>
-							
-							  <li class="review-item">
-							    <a href="https://www.booking.com/hotel/gp/calypso-bay.fr.html" target="_blank" rel="noopener" class="review-link" style="display: flex; align-items: center; gap: 0.75em;">
-							      <img src="images/logos/BOOKING.png" alt="Logo Booking" class="logo-circle" />
-							      <div class="review-text">
-							        <span>Booking</span>
-							        <div class="review-row">
-							          <span class="stars">
-							            <i class="fas fa-star color1"></i>
-							            <i class="fas fa-star color1"></i>
-							            <i class="fas fa-star color1"></i>
-							            <i class="fas fa-star color1"></i>
-							            <i class="fas fa-star-half-alt color1"></i>
-							          </span>
-							          <span class="score">(9,6/10) – 37 avis</span>
-							        </div>
-							      </div>
-							    </a>
-							  </li>
+								<li class="review-item">
+									<a href="https://www.airbnb.fr/rooms/718692761956767082" target="_blank" rel="noopener" class="review-link" style="display: flex; align-items: center; gap: 0.75em;">
+										<img src="images/logos/AIRBNB.png" alt="Logo Airbnb" class="logo-circle" />
+										<div class="review-text">
+											<span>Airbnb</span>
+											<div class="review-row">
+												<span class="stars">
+													<i class="fas fa-star color1"></i>
+													<i class="fas fa-star color1"></i>
+													<i class="fas fa-star color1"></i>
+													<i class="fas fa-star color1"></i>
+													<i class="fas fa-star-half-alt color1"></i>
+												</span>
+												<span class="score">(4,92/5) – 6 avis</span>
+											</div>
+										</div>
+									</a>
+								</li>
+
+								<li class="review-item">
+									<a href="https://www.booking.com/hotel/gp/calypso-bay.fr.html" target="_blank" rel="noopener" class="review-link" style="display: flex; align-items: center; gap: 0.75em;">
+										<img src="images/logos/BOOKING.png" alt="Logo Booking" class="logo-circle" />
+										<div class="review-text">
+											<span>Booking</span>
+											<div class="review-row">
+												<span class="stars">
+													<i class="fas fa-star color1"></i>
+													<i class="fas fa-star color1"></i>
+													<i class="fas fa-star color1"></i>
+													<i class="fas fa-star color1"></i>
+													<i class="fas fa-star-half-alt color1"></i>
+												</span>
+												<span class="score">(9,6/10) – 37 avis</span>
+											</div>
+										</div>
+									</a>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -411,8 +413,8 @@
 
 				<!-- COPYRIGHT -->
 				<div class="copyright">
-				        <span>&copy; Calypso Bay | By</span>
-				        <span class="moriarty">Moriarty</span>.
+					<span>&copy; Calypso Bay | By</span>
+					<span class="moriarty">Moriarty</span>.
 				</div>
 			</div>
 		</div>
