--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 							Jolie villa bois d’architecte, neuve et contemporaine, avec piscine à débordement et vue imprenable sur la mer, les îlets Pigeon et la réserve Cousteau.<br />
 							Pensée pour une vie dedans-dehors, elle offre des prestations de qualité dans un quartier résidentiel calme et très agréable.
 						</p>
-						<p>
-							<a href="index-en.html" title="English version">
-								<img src="https://flagcdn.com/gb.svg" width="32" height="24" alt="English flag" style="vertical-align: middle;" />
-							</a>
-							&nbsp;
-							<a href="index-de.html" title="Deutsche Version">
-								<img src="https://flagcdn.com/de.svg" width="32" height="24" alt="German flag" style="vertical-align: middle;" />
-							</a>
+						<p class="flag-links">
+						  	<a href="index-en.html" title="English version">
+						    		<img src="https://flagcdn.com/gb.svg" width="32" height="24" alt="English flag" />
+						  	</a>
+						  &nbsp;
+						  	<a href="index-de.html" title="Deutsche Version">
+						    		<img src="https://flagcdn.com/de.svg" width="32" height="24" alt="German flag" />
+						  	</a>
 						</p>
 						<ul class="actions">
 							<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
