--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						    		<img src="https://flagcdn.com/gb.svg" width="32" height="24" alt="English flag" />
 						  	</a>
 						  &nbsp;
-						  	<a href="index-de.html" title="Deutsche Version">
+						  	<a href="index-de.html" title="German version">
 						    		<img src="https://flagcdn.com/de.svg" width="32" height="24" alt="German flag" />
 						  	</a>
 						</p>
