--- a/index.html
+++ b/index.html
@@ -427,5 +427,6 @@
 		<script src="assets/js/gallery.js"></script>
 		<script src="assets/js/equipements.js"></script>
 		<script src="assets/js/planning.js"></script>
+		<script src="assets/js/form-validation.js"></script>
 	</body>
 </html>
