--- a/index-test.html
+++ b/index-test.html
@@ -11,6 +11,29 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 			<div id="wrapper">
+
+				<section class="panel medium color4-alt" style="position: relative; overflow: hidden;">
+					<div class="planning-bg"></div>
+
+					<div class="intro planning-blur-style">
+						<h2 class="major">📅 Planning & Tarifs</h2>
+						<p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
+					</div>
+
+					<div class="inner" style="position: relative; z-index: 1;">
+						<div id="calendar-header">
+							<div class="calendar-header-inner">
+								<h3 id="calendar-title"></h3>
+								<div class="nav-arrows">
+									<i id="prev-month" class="fas fa-arrow-circle-left"></i>
+									<i id="next-month" class="fas fa-arrow-circle-right"></i>
+								</div>
+							</div>
+						</div>
+						<div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
+					</div>
+				</section>
+				
 				<!-- CONTACT -->
 				<section class="panel color4-alt">
 					<div class="intro color4">
@@ -23,10 +46,6 @@
 								<a href="https://chatgpt.com/g/g-681372a9ad1081918c780920098bf210-concierge-calypso-bay" target="_blank" rel="noopener" class="button primary color2 icon solid fa-comments">Contacter Nestor</a>
 							</li>
 						</ul>
-					<p style="font-family: 'Moriarty'; font-size: 48px;">
-    Ceci est un test avec la police Moriarty.
-</p>
-
 					</div>
 
 					<div class="inner columns divided">
