--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 					</div>
 				</div>
 
-				<section class="panel medium color4-alt" style="position: relative; overflow: hidden;">
+				<section class="panel medium color4-alt">
 					<div style="position: absolute; inset: 0; z-index: 0;">
 						<img src="images/gallery/fulls/Autres/03.jpg" alt="fond planning" style="width: 100%; height: 100%; object-fit: cover; object-position: top left;" />
 					</div>
