--- a/index-test.html
+++ b/index-test.html
@@ -13,7 +13,7 @@
 		<div id="page-wrapper">
 			<div id="wrapper">
 
-				<section class="panel medium color4-alt" style="position: relative; overflow: hidden;">
+				<section class="panel medium color4-alt">
 					<div class="planning-bg"></div>
 
 					<div class="intro planning-blur-style">
