--- a/index.html
+++ b/index.html
@@ -221,10 +221,8 @@
 					</div>
 				</div>
 
-				<section class="panel medium color4-alt" style="position: relative; overflow: hidden;">
-					<div style="position: absolute; inset: 0; z-index: 0;">
-						<img src="images/gallery/fulls/Autres/03.jpg" alt="fond planning" style="width: 100%; height: 100%; object-fit: cover; object-position: top left;" />
-					</div>
+				<section class="panel medium color4-alt planning-section">
+					<div class="planning-bg"></div>
 
 					<div class="intro planning-blur-style">
 						<h2 class="major">📅 Planning & Tarifs</h2>
