--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id="page-wrapper">
 			<!-- Wrapper -->
 			<div id="wrapper">
-				<!-- ACCUEIL -->
+				<!-- ACCUEIL //////////////////////////////////////////////////////////////////////////////// -->
 				<section class="panel banner right">
 					<div class="content color0 span-3-75">
 						<h2 class="major">
@@ -48,7 +48,7 @@
 					</div>
 				</section>
 
-				<!-- INTRODUCTION -->
+				<!-- INTRODUCTION //////////////////////////////////////////////////////////////////////////////// -->
 				<section class="panel spotlight medium right" id="first">
 					<div class="content span-9-5">
 						<h3 class="major">
@@ -69,7 +69,7 @@
 					</div>
 				</section>
 
-				<!-- DESCRIPTION -->
+				<!-- DESCRIPTION //////////////////////////////////////////////////////////////////////////////// -->
 				<section class="panel medium color1">
 					<div class="intro joined">
 						<h2 class="major">📋 Descriptif de la villa</h2>
@@ -120,7 +120,7 @@
 					</div>
 				</section>
 
-				<!-- EQUIPEMENTS -->
+				<!-- EQUIPEMENTS //////////////////////////////////////////////////////////////////////////////// -->
 				<section class="panel spotlight large left">
 					<div class="content span-8">
 						<h2 class="major">🏠 Équipements de la villa</h2>
@@ -135,7 +135,7 @@
 				<!-- Conteneur des popups -->
 				<div id="popup-container"></div>
 
-				<!-- GALERIE PHOTOS -->
+				<!-- GALERIE PHOTOS //////////////////////////////////////////////////////////////////////////////// -->
 				<section class="panel">
 					<div class="intro color2">
 						<h2 class="major">📷 Galerie photos</h2>
@@ -221,6 +221,7 @@
 					</div>
 				</div>
 
+				<!-- PLANNING //////////////////////////////////////////////////////////////////////////////// -->
 				<section class="panel medium color4-alt planning-section">
 					<div class="planning-bg"></div>
 
@@ -243,7 +244,7 @@
 					</div>
 				</section>
 
-				<!-- CONTACT -->
+				<!-- CONTACT //////////////////////////////////////////////////////////////////////////////// -->
 				<section class="panel color4-alt">
 					<div class="intro color4">
 						<h2 class="major">📧 Contactez-nous</h2>
@@ -409,7 +410,7 @@
 					</div>
 				</section>
 
-				<!-- COPYRIGHT -->
+				<!-- COPYRIGHT //////////////////////////////////////////////////////////////////////////////// -->
 				<div class="copyright">
 					<span>&copy; Calypso Bay | By</span>
 					<span class="moriarty">Moriarty</span>.
