--- a/index-test.html
+++ b/index-test.html
@@ -41,18 +41,9 @@
     <p>717 rue de Poirier, 97125 Bouillante, Guadeloupe</p>
   </div>
   <div class="inner">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3833.8829628149996!2d-61.774117!3d16.107842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c135c01473d8c03%3A0x4e430f46fd40e3f5!2s717%20Rue%20de%20Poirier%2C%20Bouillante%2097125%2C%20Guadeloupe!5e0!3m2!1sfr!2sfr!4v1715710643553!5m2!1sfr!2sfr"
-      width="100%"
-      height="400"
-      style="border:0; border-radius: 12px;"
-      allowfullscreen=""
-      loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+    <div id="map" class="map-container"></div>
   </div>
 </section>
-
 				
 				<!-- CONTACT -->
 				<section class="panel color4-alt">
@@ -219,5 +210,7 @@
 		<script src="assets/js/main.js"></script>
 		<script src="assets/js/equipements.js"></script>
 		<script src="assets/js/planning.js"></script>
+		<script src="assets/js/map.js"></script>
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFp6D86jezXVKBD5LKgR4iHKTZ9rcMUlHU&callback=initMap"></script>
 	</body>
 </html>
