--- a/index-test.html
+++ b/index-test.html
@@ -36,7 +36,7 @@
 				</section>
 
 <section class="panel medium color5-alt">
-  <div class="intro color5-alt">
+  <div class="intro">
     <h2 class="major">Où se situe la villa ?</h2>
     <p>717 rue de Poirier, 97125 Bouillante, Guadeloupe</p>
   </div>
