--- a/index-test.html
+++ b/index-test.html
@@ -37,7 +37,7 @@
 
 <section class="panel medium color5-alt">
   <div class="intro">
-    <h2 class="major">Où se situe la villa ?</h2>
+    <h2 class="major">📍 Où se situe la villa ?</h2>
     <p>717 rue de Poirier, 97125 Bouillante, Guadeloupe</p>
   </div>
   <div class="inner">
