--- a/index.html
+++ b/index.html
@@ -221,6 +221,17 @@
 					</div>
 				</div>
 
+				<!-- LOCALISATION //////////////////////////////////////////////////////////////////////////////// -->
+				<section class="panel medium color5-alt">
+					<div class="intro">
+						<h2 class="major">📍 Où se situe la villa ?</h2>
+						<p>717 rue de Poirier, 97125 Bouillante, Guadeloupe</p>
+					  </div>
+					  <div class="inner">
+						<div id="map" class="map-container"></div>
+					</div>
+				</section>
+				
 				<!-- PLANNING //////////////////////////////////////////////////////////////////////////////// -->
 				<section class="panel medium color4-alt planning-section">
 					<div class="planning-bg"></div>
@@ -427,5 +438,7 @@
 		<script src="assets/js/equipements.js"></script>
 		<script src="assets/js/planning.js"></script>
 		<script src="assets/js/form-validation.js"></script>
+		<script src="assets/js/map.js"></script>
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFpGB6jezXVKBDSLkgR4iHKTZ9rcMUIHU&callback=initMap"></script>
 	</body>
 </html>
