--- a/index.html
+++ b/index.html
@@ -239,6 +239,11 @@
 					<div class="intro planning-blur-style">
 						<h2 class="major">📅 Planning & Tarifs</h2>
 						<p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
+						<ul class="actions" style="margin-top: 1.5rem;">
+							<li>
+								<a href="#" class="button primary icon solid fa-info-circle" data-popup="reglement">Règlement intérieur</a>
+							</li>
+						</ul>
 					</div>
 
 					<div class="inner" style="position: relative; z-index: 1;">
