--- a/index.html
+++ b/index.html
@@ -259,6 +259,27 @@
 						<div id="calendar-grid" style="display: grid; grid-template-columns: repeat(7, 1fr); gap: 0.5rem;"></div>
 					</div>
 				</section>
+				
+				<div id="popup-reglement" class="equipment-popup">
+					<div class="popup-content">
+						    <span class="close-popup">&times;</span>
+						    <h3>Règlement intérieur</h3>
+						    <ul>
+						      <li><strong>Arrivée :</strong> entre 15:00 et 20:00</li>
+						      <li><strong>Départ :</strong> avant 10:00</li>
+						      <li><strong>6 voyageurs maximum</strong></li>
+						      <li>Pas d’animaux</li>
+						      <li>Calme requis entre 23:00 et 07:00</li>
+						      <li>Pas de fête ni de soirée</li>
+						      <li>Photographie commerciale autorisée</li>
+						      <li>Logement fumeur</li>
+						    </ul>
+						    <p><strong>Règles supplémentaires :</strong><br />
+						      Il est possible de fumer dans la villa mais ni dans les chambres, ni dans les salles de bains.<br />
+						      Possibilité de recevoir des amis, mais pas pour dormir (maximum de couchages : 6).
+						    </p>
+					</div>
+				</div>
 
 				<!-- CONTACT //////////////////////////////////////////////////////////////////////////////// -->
 				<section class="panel color4-alt">
@@ -445,5 +466,6 @@
 		<script src="assets/js/form-validation.js"></script>
 		<script src="assets/js/map.js"></script>
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFpGB6jezXVKBDSLkgR4iHKTZ9rcMUIHU&callback=initMap"></script>
+		<script src="js/popup-reglement.js"></script>
 	</body>
 </html>
