--- a/index.html
+++ b/index.html
@@ -260,20 +260,22 @@
 					</div>
 				</section>
 				
-<div class="popup-content">
-  <span class="close-popup">&times;</span>
-  <h3><i class="fas fa-clipboard-list"></i> Règlement intérieur</h3>
+<div id="popup-reglement" class="equipment-popup">
+  <div class="popup-content">
+    <span class="close-popup">&times;</span>
+    <h3><i class="fas fa-clipboard-list"></i> Règlement intérieur</h3>
 
-  <ul>
-    <li><i class="fas fa-sign-in-alt"></i> Arrivée entre 15:00 et 20:00</li>
-    <li><i class="fas fa-sign-out-alt"></i> Départ avant 10:00</li>
-    <li><i class="fas fa-user-friends"></i> 6 voyageurs maximum (y compris les invités de passage)</li>
-    <li><i class="fas fa-ban"></i> Pas d’animaux</li>
-    <li><i class="fas fa-moon"></i> Calme requis entre 23:00 et 07:00</li>
-    <li><i class="fas fa-glass-cheers"></i> Pas de fête ni de soirée</li>
-    <li><i class="fas fa-camera"></i> Photographie commerciale autorisée</li>
-    <li><i class="fas fa-smoking"></i> Fumer autorisé uniquement dans les espaces extérieurs (pas dans les chambres ni les salles de bains)</li>
-  </ul>
+    <ul>
+      <li><i class="fas fa-sign-in-alt"></i> Arrivée entre 15:00 et 20:00</li>
+      <li><i class="fas fa-sign-out-alt"></i> Départ avant 10:00</li>
+      <li><i class="fas fa-user-friends"></i> 6 voyageurs maximum (y compris les invités de passage)</li>
+      <li><i class="fas fa-ban"></i> Pas d’animaux</li>
+      <li><i class="fas fa-moon"></i> Calme requis entre 23:00 et 07:00</li>
+      <li><i class="fas fa-glass-cheers"></i> Pas de fête ni de soirée</li>
+      <li><i class="fas fa-camera"></i> Photographie commerciale autorisée</li>
+      <li><i class="fas fa-smoking"></i> Fumer autorisé uniquement dans les espaces extérieurs (pas dans les chambres ni les salles de bains)</li>
+    </ul>
+  </div>
 </div>
 
 				<!-- CONTACT //////////////////////////////////////////////////////////////////////////////// -->
