--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
       <li><i class="fas fa-sign-in-alt"></i> Arrivée entre 15:00 et 20:00</li>
       <li><i class="fas fa-sign-out-alt"></i> Départ avant 10:00</li>
       <li><i class="fas fa-user-friends"></i> 6 voyageurs maximum (y compris les invités de passage)</li>
-      <li><i class="fas fa-ban"></i> Pas d’animaux</li>
+      <li><i class="fas fa-dog"></i> Pas d’animaux</li>
       <li><i class="fas fa-moon"></i> Calme requis entre 23:00 et 07:00</li>
       <li><i class="fas fa-glass-cheers"></i> Pas de fête ni de soirée</li>
       <li><i class="fas fa-camera"></i> Photographie commerciale autorisée</li>
-      <li><i class="fas fa-smoking"></i> Fumer autorisé uniquement dans les espaces extérieurs (pas dans les chambres ni les salles de bains)</li>
+      <li><i class="fas fa-smoking"></i> Fumeur autorisé (hors des chambres et des salles de bains)</li>
     </ul>
   </div>
 </div>
