--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <ul>
       <li><i class="fas fa-sign-in-alt"></i> Arrivée entre 15:00 et 20:00</li>
       <li><i class="fas fa-sign-out-alt"></i> Départ avant 10:00</li>
-      <li><i class="fas fa-user-friends"></i> 6 voyageurs maximum (y compris les invités de passage)</li>
+      <li><i class="fas fa-user-friends"></i> 6 voyageurs maximum</li>
       <li><i class="fas fa-dog"></i> Pas d’animaux</li>
       <li><i class="fas fa-moon"></i> Calme requis entre 23:00 et 07:00</li>
       <li><i class="fas fa-glass-cheers"></i> Pas de fête ni de soirée</li>
