--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
       <li><i class="fas fa-moon"></i> Calme requis entre 23:00 et 07:00</li>
       <li><i class="fas fa-glass-cheers"></i> Pas de fête ni de soirée</li>
       <li><i class="fas fa-camera"></i> Photographie commerciale autorisée</li>
+      <li><i class="fas fa-user-plus"></i> Visites autorisées (pas d’hébergement pour les invités)</li>
       <li><i class="fas fa-smoking"></i> Fumeur autorisé (hors des chambres et des salles de bains)</li>
     </ul>
   </div>
