--- a/index.html
+++ b/index.html
@@ -365,26 +365,11 @@
 											</div>
 											<div class="field quarter">
 												<label for="r-adultes">Nombre d’adultes</label>
-												<select name="r-adultes" id="r-adultes" required>
-													<option value="" disabled selected hidden>Choisir</option>
-													<option value="1">1 adulte</option>
-													<option value="2">2 adultes</option>
-													<option value="3">3 adultes</option>
-													<option value="4">4 adultes</option>
-													<option value="5">5 adultes</option>
-													<option value="6">6 adultes</option>
-												</select>
+												<select name="r-adultes" id="r-adultes" required></select>
 											</div>
 											<div class="field quarter">
 												<label for="r-enfants">Nombre d’enfants</label>
-												<select name="r-enfants" id="r-enfants">
-													<option value="" disabled selected hidden>Choisir</option>
-													<option value="0">0 enfant</option>
-													<option value="1">1 enfant</option>
-													<option value="2">2 enfants</option>
-													<option value="3">3 enfants</option>
-													<option value="4">4 enfants</option>
-												</select>
+												<select name="r-enfants" id="r-enfants"></select>
 											</div>
 
 											<div class="field">
