--- a/index-test.html
+++ b/index-test.html
@@ -68,6 +68,13 @@
   </div>
 </section>
 
+<div id="mobile-banner" style="display: none;">
+  <div>
+    Séjour du <span id="mobile-start"></span> au <span id="mobile-end"></span><br />
+    <strong id="mobile-nights"></strong> nuits sélectionnées
+  </div>
+  <a href="#contact" class="button primary small icon solid fa-check" style="margin-top: 0.5rem;">Réserver</a>
+</div>
 				
 				<!-- CONTACT -->
 				<section class="panel color4-alt">
